Refocus MSFH on homeowner quote-prep briefs